Update benchmark test make files to output test name for each test within a single test file.

--- a/benchmarks/sl/atva-2014/Makefile
+++ b/benchmarks/sl/atva-2014/Makefile
@@ -6,8 +6,9 @@ DEFS := "$(ROOT)/examples/IosifEtAl-ATVA2014.defs"
 all: $(TESTS)
 
 $(TESTS): %.tst:
-	@echo "$@"
-	-@while read -r SEQ; do \
-		echo -n "\t"; \
+	-@TST_COUNT=1; \
+	while read -r SEQ; do \
+		echo "$@.$$TST_COUNT"; \
+		TST_COUNT=$$(($$TST_COUNT+1)); \
 		(cd "$(ROOT)" && timeout "$$(($(TIMEOUT) + 1))" dune exec $(CMD) -- -D $(DEFS) $(TST_OPTS) -t $(TIMEOUT) -S "$$SEQ" || echo "Not proved (timeout)") ;\
 	done < "$@"
