--- a/benchmarks/sl/base/Makefile
+++ b/benchmarks/sl/base/Makefile
@@ -6,8 +6,9 @@ TESTS:= $(sort $(wildcard *.tst))
 all: $(TESTS)
 
 $(TESTS): %.tst:
-	@echo "$@"
-	-@while read -r SEQ; do \
-		echo -n "\t"; \
+	-@TST_COUNT=1; \
+	while read -r SEQ; do \
+		echo "$@.$$TST_COUNT"; \
+		TST_COUNT=$$(($$TST_COUNT+1)); \
 		(cd "$(ROOT)" && timeout "$$(($(TIMEOUT) + 1))" dune exec $(CMD) -- $(TST_OPTS) -t $(TIMEOUT) -S "$$SEQ" || echo "Not proved (timeout)") ;\
 	done < "$@"
