--- a/src/generic/dune
+++ b/src/generic/dune
@@ -8,9 +8,9 @@
  (modules_without_implementation sequent)
  (foreign_stubs
   (language c)
-  (names proof
-    proof_aut trace buchi_soundness
-    types sloped_relation heighted_graph relational_soundness)
+  (names
+    proof proof_aut trace legacy_soundness
+    types sloped_relation heighted_graph soundness)
   (flags :standard -xc++ -std=c++17 (:include c_flags.sexp))
   (include_dirs %{ocaml_where}/caml))
  (c_library_flags (:include c_library_flags.sexp) -lpthread -lstdc++))
