--- a/benchmarks/sl/base/Makefile
+++ b/benchmarks/sl/base/Makefile
@@ -7,8 +7,9 @@ all: $(TESTS)
 
 $(TESTS): %.tst:
 	-@TST_COUNT=1; \
+	TST_NAME=$@; \
 	while read -r SEQ; do \
-		echo "$@.$$TST_COUNT"; \
+		echo "test case: cyclist-sl-$${TST_NAME%.tst}.$$TST_COUNT"; \
 		TST_COUNT=$$(($$TST_COUNT+1)); \
 		(cd "$(ROOT)" && timeout "$$(($(TIMEOUT) + 1))" dune exec $(CMD) -- $(TST_OPTS) -t $(TIMEOUT) -S "$$SEQ" || echo "Not proved (timeout)") ;\
 	done < "$@"
