Modify Dockerfile for POPL2024 configuration so that it uses the correct dune-workspace file out of the box; add some instructions about building the DOcker images.

--- a/Dockerfile.POPL2024
+++ b/Dockerfile.POPL2024
@@ -50,6 +50,7 @@ RUN \
   eval `opam config env` && \
   opam update && \
   opam install -y --deps-only ./cyclist.opam && \
+  rm -f dune-workspace && mv dune-workspace.POPL2024 dune-workspace && \
   dune build
 
 WORKDIR /home/cyclist
