--- a/src/generic/dune
+++ b/src/generic/dune
@@ -10,7 +10,9 @@
   (language c)
   (names
     proof proof_aut trace legacy_soundness
-    types sloped_relation heighted_graph soundness)
+    types sloped_relation heighted_graph soundness
+    sledgehammer criterion.fwk criterion.order_reduced
+    criterion.sla criterion.vla criterion.soundness)
   (flags :standard -xc++ -std=c++17 (:include c_flags.sexp))
   (include_dirs %{ocaml_where}/caml))
  (c_library_flags (:include c_library_flags.sexp) -lpthread -lstdc++))
