add -SH flag to run sledgehammer

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ tests/mutant/*
 .projectSettings
 .settings/
 
+# VSCode Files #
+################
+.vscode
+
 # Ocaml Executables #
 #####################
 *.native
