Fix .gitignore for VSCode files, remove VSCode settings file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# LaTeX files #
+###############
 *.aux
 examples/*.pdf
 *.backup
@@ -11,6 +13,7 @@ examples/mutant_CAV06
 examples/mutant_CAV06/*
 tests/mutant
 tests/mutant/*
+
 # Eclipse Files #
 #################
 .paths
@@ -20,9 +23,9 @@ tests/mutant/*
 
 # VSCode Files #
 ################
-.vscode
+.vscode/
 
-# Ocaml Executables #
+# OCaml Executables #
 #####################
 *.native
 *.byte
