--- a/src/generic/dune
+++ b/src/generic/dune
@@ -13,7 +13,7 @@
     types sloped_relation heighted_graph soundness
     sledgehammer criterion.fwk criterion.order_reduced
     criterion.sla criterion.vla 
-    criterion.flat_cycles
+    criterion.flat_cycles criterion.flat_cycles.generalized criterion.no_flat_extended_cycles
     criterion.soundness)
   (flags :standard -xc++ -std=c++17 (:include c_flags.sexp))
   (include_dirs %{ocaml_where}/caml))
