--- a/src/generic/test/Makefile
+++ b/src/generic/test/Makefile
@@ -22,11 +22,11 @@ endef
 
 all: soundness tests
 
-soundness: main.o sloped_relation.o heighted_graph.o criterion.soundness.o sledgehammer.o 
-	g++ -g -o soundness main.o sloped_relation.o heighted_graph.o criterion.soundness.o sledgehammer.o `pkg-config --libs libspot libbddx`
+soundness: main.o sloped_relation.o heighted_graph.o graph.o criterion.soundness.o criterion.process_based.o directed_graph.o sledgehammer.o 
+	g++ -g -o soundness main.o sloped_relation.o heighted_graph.o graph.o criterion.soundness.o criterion.process_based.o directed_graph.o sledgehammer.o `pkg-config --libs libspot libbddx`
 
-run_on_graphs: run_on_graphs.o sloped_relation.o heighted_graph.o heighted_graph_parser.o criterion.soundness.o criterion.process_based.o directed_graph.o sledgehammer.o
-	g++ -g -o run_on_graphs run_on_graphs.o sloped_relation.o heighted_graph.o  criterion.soundness.o criterion.process_based.o directed_graph.o sledgehammer.o `pkg-config --libs libspot libbddx`
+run_on_graphs: run_on_graphs.o sloped_relation.o heighted_graph.o graph.o heighted_graph_parser.o criterion.soundness.o criterion.process_based.o directed_graph.o sledgehammer.o
+	g++ -g -o run_on_graphs run_on_graphs.o sloped_relation.o heighted_graph.o graph.o criterion.soundness.o criterion.process_based.o directed_graph.o sledgehammer.o `pkg-config --libs libspot libbddx`
 
 run_on_graphs.o: run_on_graphs.cpp ../heighted_graph.hpp ./heighted_graph_parser.cpp
 	g++ ${CFLAGS} `pkg-config --cflags libspot libbddx` -I ../ -L/opt/lib -g -c run_on_graphs.cpp -o run_on_graphs.o
@@ -47,7 +47,9 @@ sledgehammer.o: ../sledgehammer.hpp ../sledgehammer.c ../criterion.soundness.hpp
 	../criterion.process_based.hpp ../criterion.process_based.c \
 	../criterion.order_reduced.c ../criterion.fwk.c ../criterion.sla.c ../criterion.vla.c \
 	../directed_graph.hpp ../directed_graph.c \
-	../criterion.flat_cycles.c ../criterion.flat_cycles.generalized.c ../criterion.no_flat_extended_cycles.c \
+	../graph.hpp ../graph.c \
+	../criterion.flat_cycles.c ../criterion.flat_cycles.generalized.c \
+	../criterion.sprenger_dam.c ../criterion.no_flat_extended_cycles.c \
 	../heighted_graph.hpp ../sloped_relation.hpp ../types.c 
 	g++ ${CFLAGS} `pkg-config --cflags libspot libbddx` -I ../ -L/usr/lib -L/opt/lib -g -c ../sledgehammer.c -o sledgehammer.o
 
@@ -59,6 +61,9 @@ criterion.process_based.o: ../criterion.process_based.c ../criterion.process_bas
 
 directed_graph.o: ../directed_graph.c ../directed_graph.hpp ../types.c
 	g++ ${CFLAGS} -I ../ -L/opt/lib -g -c ../directed_graph.c -o directed_graph.o
+
+graph.o: ../graph.c ../graph.hpp ../sloped_relation.hpp ../types.c
+	g++ ${CFLAGS} -I ../ -L/opt/lib -g -c ../graph.c -o graph.o
 
 .PHONY: \
     clean \
@@ -96,6 +101,7 @@ clean:
 
 run-on-graphs-sh-single: run_on_graphs
 	./run_on_graphs delete_me_graphs H0fms
+	
 run-on-graphs-sh-new: run_on_graphs
 	./run_on_graphs graphs H0fms
 
